// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp /> Debe coincidir con el snapshot 1`] = `
<div
  className="container"
>
  <h1>
    Gift Expert App
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</div>
`;

exports[`Pruebas en <GifExpertApp /> Debe de mostrar una lista de categorías 1`] = `
<div
  className="container"
>
  <h1>
    Gift Expert App
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="Dragon Ball Super"
    key="Dragon Ball Super"
  />
  <GifGrid
    category="Saint Seiya"
    key="Saint Seiya"
  />
</div>
`;
